# tauri-vanilla

src-tauri/: Cargo.toml  tauri.conf.json
