[package]
name = "tauri-vanilla"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[patch.crates-io]
serde = { git = "https://github.com/serde-rs/serde", package = "serde" }
serde_derive = { git = "https://github.com/serde-rs/serde", package = "serde_derive" }
serde_json = { git = "https://github.com/serde-rs/json", package = "serde_json" }
tauri = { git = "https://github.com/tauri-apps/tauri", package = "tauri" }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
